objects/AW_ReallocationSetting__mdt.object
<CustomObject>
    <description>Used to configure settings for Orphan Lead and Account Reallocation</description>
    <fields>
        <fullName>AW_AveragePerformanceThreshold__c</fullName>
        <description>This is used to calculate the average performance of an adviser</description>
        <label>Average Performance Threshold</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_BranchIdFieldAPIName__c</fullName>
        <description>This is used to store the lead/account branch api name</description>
        <label>Branch Id Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_OwnerUACFIdFieldAPIName__c</fullName>
        <description>This is used to store the api name of the Adviser UACF ID field on account/Lead Objects.</description>
        <label>Owner UACF Id Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SLADurationInMilliseconds__c</fullName>
        <description>This is used to store the time frame in milliseconds</description>
        <label>SLA Duration In Milliseconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_WeightForLeadConversionRate__c</fullName>
        <description>This is used to store weight for lead conversion rate</description>
        <label>Weight For Lead Conversion Rate</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_WeightForOpportunityWinRate__c</fullName>
        <description>This is used to store weight for opportunity win rate</description>
        <label>Weight For Opportunity Win Rate</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Reallocation Setting</label>
    <pluralLabel>Reallocation Settings</pluralLabel>
</CustomObject>